--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "ls2": "npm ls --depth=0",
     "start": "node pipfix.js",
-    "dbg": "node-debug pipfix.js"
+    "dbg_not_working_cos_nodejs_bug_wait_for_future_fix": "node-debug pipfix.js",
+    "dbg": "node --inspect --debug-brk pipfix.js"
   },
   "keywords": [
     "pip",
