--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-inspector": "^0.12.8"
   },
   "dependencies": {
-    "fmt-obj": "^1.0.0"
+    "fmt-obj": "^1.0.0",
+    "pretty-format": "^18.1.0"
   }
 }
