--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "^3.2.0",
+    "mockery": "^2.0.0",
     "node-inspector": "^0.12.8",
     "should": "^11.2.0",
     "sinon": "^1.17.7"
