first mock test of system python passes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test_ori": "echo \"Error: no test specified\" && exit 1",
     "test": "./node_modules/mocha/bin/mocha",
-    "test_fred": "./node_modules/mocha/bin/mocha --fgrep fredªª",
+    "test_fred": "./node_modules/mocha/bin/mocha --fgrep fred",
+    "test_dbg": "./node_modules/mocha/bin/mocha --inspect --debug-brk --fgrep \"python existence\"",
+    "test_python_existence": "./node_modules/mocha/bin/mocha --fgrep \"python existence\"",
     "ls2": "npm ls --depth=0",
     "start": "node pipfix.js",
     "dbg_not_working_cos_nodejs_bug_wait_for_future_fix": "node-debug pipfix.js",
