test 'two pythons default python is usr_local_bin' passes

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test_fred": "./node_modules/mocha/bin/mocha --fgrep fred",
     "test_dbg": "./node_modules/mocha/bin/mocha --inspect --debug-brk --fgrep \"python existence\"",
     "test_python_existence": "./node_modules/mocha/bin/mocha --fgrep \"python existence\"",
-    "test_python_default": "./node_modules/mocha/bin/mocha --fgrep \"default pip and python detection\"",
-    "test_python_default_dbg": "./node_modules/mocha/bin/mocha  --inspect --debug-brk --fgrep \"default pip and python detection\"",
+    "test_python_default": "./node_modules/mocha/bin/mocha --fgrep \"default python detection\"",
+    "test_python_default_dbg": "./node_modules/mocha/bin/mocha  --inspect --debug-brk --fgrep \"default python detection\"",
     "ls2": "npm ls --depth=0",
     "start": "node pipfix.js",
     "dbg_not_working_cos_nodejs_bug_wait_for_future_fix": "node-debug pipfix.js",
