added command line parsing with options --noadvice --noreport

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sinon": "^1.17.7"
   },
   "dependencies": {
+    "caporal": "^0.3.0",
     "fmt-obj": "^1.0.0",
     "pretty-format": "^18.1.0"
   }
