added winston logging, verbosity via logger level respected

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "opn": "^5.2.0",
     "should": "^11.2.0",
     "sinon": "^5.0.0",
-    "vis": "^4.21.0"
+    "vis": "^4.21.0",
+    "winston": "^2.4.0"
   },
   "dependencies": {
     "caporal": "^0.3.0",
